# shurectl

./: 62-mvx2u.rules  62-shure.rules  99-mvx2u.rules  CLAUDE.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: rust-clippy.yml
src/: app.rs  device.rs  main.rs  meter.rs  presets.rs  protocol.rs  ui.rs
