[package]
name = "shurectl"
version = "1.0.0"
edition = "2024"
description = "shurectl — TUI configurator for the Shure MVX2U audio interface on Linux"

[[bin]]
name = "shurectl"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
hidapi = { version = "2.4.1", default-features = false, features = ["linux-native"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.17"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
